--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - cupti=10.0.130=0
   - cycler=0.10.0=py37_0
   - cytoolz=0.10.1=py37h7b6447c_0
-  - dask-core=2.9.0=py_0
+  - dask-core=2.9.1=py_0
   - dbus=1.13.12=h746ee38_0
   - decorator=4.4.1=py_0
   - defusedxml=0.6.0=py_0
@@ -47,10 +47,10 @@ dependencies:
   - importlib_metadata=1.3.0=py37_0
   - intel-openmp=2019.4=243
   - ipykernel=5.1.3=py37h39e3cac_0
-  - ipython=7.8.0=py37h39e3cac_0
+  - ipython=7.11.1=py37h39e3cac_0
   - ipython_genutils=0.2.0=py37_0
   - jasper=2.0.14=h07fcdf6_1
-  - jedi=0.15.1=py37_0
+  - jedi=0.15.2=py37_0
   - jinja2=2.10.3=py_0
   - joblib=0.14.1=py_0
   - jpeg=9b=h024ee3a_2
@@ -63,6 +63,7 @@ dependencies:
   - keras-applications=1.0.8=py_0
   - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.1.0=py37he6710b0_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
@@ -88,6 +89,8 @@ dependencies:
   - mkl_fft=1.0.15=py37ha843d7b_0
   - mkl_random=1.1.0=py37hd6b4f25_0
   - more-itertools=8.0.2=py_0
+  - nb_conda=2.2.1=py37_0
+  - nb_conda_kernels=2.2.2=py37_0
   - nbconvert=5.6.1=py37_0
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=he6710b0_1
@@ -106,19 +109,19 @@ dependencies:
   - pcre=8.43=he6710b0_0
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
-  - pillow=6.2.1=py37h34e0f95_0
-  - pip=19.2.3=py37_0
+  - pillow=7.0.0=py37hb39fc2d_0
+  - pip=19.3.1=py37_0
   - pixman=0.38.0=h7b6447c_0
   - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=2.0.10=py_0
+  - prompt_toolkit=3.0.2=py_0
   - protobuf=3.11.2=py37he6710b0_0
   - ptyprocess=0.6.0=py37_0
   - py-opencv=3.4.2=py37hb342d67_1
   - pygments=2.5.2=py_0
-  - pyparsing=2.4.5=py_0
+  - pyparsing=2.4.6=py_0
   - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.15.6=py37h7b6447c_0
-  - python=3.7.5=h0371630_0
+  - python=3.7.6=h0371630_2
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
   - pywavelets=1.1.1=py37h7b6447c_0
@@ -126,10 +129,10 @@ dependencies:
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - scikit-image=0.15.0=py37he6710b0_0
-  - scikit-learn=0.21.3=py37hd81dba3_0
+  - scikit-learn=0.22=py37hd81dba3_0
   - scipy=1.3.2=py37h7c811a0_0
   - send2trash=1.5.0=py37_0
-  - setuptools=42.0.2=py37_0
+  - setuptools=44.0.0=py37_0
   - sip=4.19.8=py37hf484d3e_0
   - six=1.13.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
